@startuml Dashboard_Class_Diagram_BE_Logic

skinparam backgroundColor white
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #6C757D
skinparam arrowColor #495057
skinparam packageStyle rectangle
skinparam ranksep 20
skinparam nodesep 15

title Dashboard Module – Class Diagram (Backend, with DTO Relations)

package "API Layer" {
  class ReportController {
    + getRemainSummary(): List<CategoryRemainSummaryDto>
    + getRevenueTrend(): List<RevenueTrendDto>
    + getStockByCategory(): List<StockByCategoryDto>
    + getExpiringLots(): List<ExpiringLotDto>
    + getInOutSummary(): List<InOutSummaryDto>
  }

  class ImportTransactionController {
    + getRecentImports(): List<ImportTransactionResponseDto>
  }

  class SaleTransactionController {
    + getRecentSales(): List<SaleTransactionResponseDto>
  }
}

package "Service Layer" {
  interface ReportService {
    + getRemainSummary()
    + getRevenueTrend()
    + getStockByCategory()
    + getExpiringLots()
    + getInOutSummary()
  }

  class ReportServiceImpl {
    - importTransactionDetailRepository
    - stocktakeRepository
    - saleTransactionRepository
    - productRepository
    - zoneRepository
    - categoryRepository
    - importTransactionRepository
  }

  ReportService <|.. ReportServiceImpl
}

package "Repository Layer" {
  interface Repositories {
    + ImportTransactionDetailRepository
    + ImportTransactionRepository
    + SaleTransactionRepository
    + StocktakeRepository
    + ProductRepository
    + ZoneRepository
    + CategoryRepository
  }
}

package "DTOs" {
  class CategoryRemainSummaryDto
  class RevenueTrendDto
  class StockByCategoryDto
  class ExpiringLotDto
  class InOutSummaryDto
  class ImportTransactionResponseDto
  class SaleTransactionResponseDto
}

' Relationships
ReportController --> ReportService : uses
ReportServiceImpl --> Repositories

' Controller -> DTOs
ReportController --> CategoryRemainSummaryDto
ReportController --> RevenueTrendDto
ReportController --> StockByCategoryDto
ReportController --> ExpiringLotDto
ReportController --> InOutSummaryDto

ImportTransactionController --> ImportTransactionResponseDto
SaleTransactionController --> SaleTransactionResponseDto

@enduml
